Changing Files name

--- a/app/src/main/res/layout/activity_note_add_update.xml
+++ b/app/src/main/res/layout/activity_note_add_update.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".ui.insert.NoteAddUpdateActivity">
+    tools:context=".ui.insert.AddUpdateNoteActivity">
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
